Add Main cahrcter Sprite to Game.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
     <div class="game">
-        <div id="character">
-            <img src="" alt="">
-        </div>
+        <canvas id="character" class="animate" width="40" height="40">
+        </canvas>
         <div id="block"></div>
     </div>
     <p>Score: <span id="scoreSpan"></span></p>
