Add Better res charcter asprite and background color.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="Bg"></div>
     <div class="game">
-        <canvas id="character" class="animate" width="40" height="40">
+        <canvas id="character" class="jump" width="40" height="40">
         </canvas>
+        <div id="char"></div>
         <div id="block"></div>
     </div>
     <p>Score: <span id="scoreSpan"></span></p>
