Fix Logic. Fix coliders sizes with new asset for charcter (Sadesm a.k.a Sadegh Ghelghli himself)

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
     <div class="Bg"></div>
     <div class="game">
-        <canvas id="character" class="jump" width="40" height="40">
-        </canvas>
+        <div id="character">
+            <div id="asset"></div>
+        </div>
         <div id="char"></div>
         <div id="block"></div>
     </div>
