Verson 1.0.0 . Add animations. Fix attrebutes. Add Js logo as enamy of Sadesm!

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 <body>
     <div class="Bg"></div>
     <div class="game">
-        <div id="character">
-            <div id="asset"></div>
+        <div id="character" class="run">
         </div>
-        <div id="char"></div>
         <div id="block"></div>
+        <div class="text-box">
+            <p>Score: <span id="scoreSpan"></span></p>
+            <p>High Score: <span id="highscoreSpan"></span></p>
+        </div>
     </div>
-    <p>Score: <span id="scoreSpan"></span></p>
-    <p>High Score: <span id="highscoreSpan"></span></p>
+    
 </body>
 <script src="script.js"></script>
 </html>
